Add support for new C++ preprocessing number tokens.
Reported by Moritz Bunkus <moritz@bunkus.org>
at <https://savannah.gnu.org/bugs/?50117>.

* gettext-tools/src/x-c.c (phase5_get): Recognize C++14 and C++17 extensions of
preprocessing number tokens.
* gettext-tools/tests/xgettext-c-22: New file.
* gettext-tools/tests/Makefile.am (TESTS): Add it.
* NEWS: Mention the change.

--- a/NEWS
+++ b/NEWS
@@ -2,8 +2,11 @@
   - update-po target in Makefile.in.in now uses msgfmt --previous.
 
 * Programming languages support:
+  - C++:
+    xgettext now supports single-quotes and 'p'/'P' exponent markers in
+    number tokens, as specified in C++14 and C++17, respectively.
   - Java:
-    xgettext now support UTF-8 encoded .properties files (a new feature
+    xgettext now supports UTF-8 encoded .properties files (a new feature
     of Java 9).
   - Perl:
     o Native support for context functions (pgettext, dpgettext, dcpgettext,
