--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,8 @@
     xgettext now supports 'p'/'P' exponent markers in number tokens, as
     specified in C99 and C++17.
   - C++:
+    xgettext now supports underscores in number tokens.
+  - C++:
     xgettext now supports single-quotes in number tokens, as specified in
     C++14.
   - Java:
