Add support for recent Java versions.
Reported by Emmanuel Bourg <ebourg@apache.org>
at <https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=892733>
via Santiago Vila.

* gettext-runtime/configure.ac: Require a Java compiler that supports
source-version 1.5 and target-version 1.6 (such as Java 6 or newer, or
GCJ 4.3 or newer).
* gettext-tools/src/write-java.c (msgdomain_write_java): Likewise
* gettext-tools/examples/hello-java-qtjambi/configure.ac: Likewise.
* gettext-tools/configure.ac: Require a Java compiler that supports
source-version 1.5 (such as Java 5 or newer, or GCJ 4.3 or newer).
* gettext-tools/examples/hello-java/configure.ac: Likewise.
* gettext-tools/examples/hello-java-awt/configure.ac: Likewise.
* gettext-tools/examples/hello-java-swing/configure.ac: Likewise.
* NEWS: Mention the change.

--- a/NEWS
+++ b/NEWS
@@ -14,8 +14,11 @@
     xgettext now supports single-quotes in number tokens, as specified in
     C++14.
   - Java:
-    xgettext now supports UTF-8 encoded .properties files (a new feature
-    of Java 9).
+    o xgettext now supports UTF-8 encoded .properties files (a new feature
+      of Java 9).
+    o The build system and tools now support Java 9 and 10. On the other
+      hand, support for old versions of Java (Java 5 and older, GCJ 4.2.x
+      and older) has been dropped.
   - Perl:
     o Native support for context functions (pgettext, dpgettext, dcpgettext,
       npgettext, dnpgettext, dcnpgettext).
