libintl: Ensure the *printf function overrides are POSIX compatible.
Reported by Eli Zaretskii <eliz@gnu.org>.

* gettext-runtime/intl/printf.c (USE_REPLACEMENT_CODE_ALWAYS): New macro.
(libintl_vfprintf, libintl_vsprintf, libintl_vsnprintf, libintl_vfwprintf,
libintl_vswprintf): Use it.
* NEWS: Mention the change.

--- a/NEWS
+++ b/NEWS
@@ -28,6 +28,12 @@
     xgettext can now extract strings from .rsj files, produced by the
     Free Pascal compiler version 3.0.0 or newer.
 
+* Runtime behaviour:
+  The replacements for the printf()/fprintf()/... functions that are
+  provided through <libintl.h> on native Windows and NetBSD are now POSIX
+  compliant.  There is no conflict any more between these replacements
+  and other possible replacements provided by gnulib or mingw.
+
 Version 0.19.8 - June 2016
 
 * Support for reproducible builds:
