libintl: Fix language preferences on macOS 10.12 or newer.
Reported by Kristian Rietveld <kris@loopnest.org> at
<https://savannah.gnu.org/bugs/?49560>.

* gettext-runtime/intl/langprefs.c (_nl_language_preferences_default): Handle
preferences elements of the form "ll-CC" in a reasonable way.
* NEWS: Mention the change.

--- a/NEWS
+++ b/NEWS
@@ -36,10 +36,11 @@
     Free Pascal compiler version 3.0.0 or newer.
 
 * Runtime behaviour:
-  The replacements for the printf()/fprintf()/... functions that are
-  provided through <libintl.h> on native Windows and NetBSD are now POSIX
-  compliant.  There is no conflict any more between these replacements
-  and other possible replacements provided by gnulib or mingw.
+  - The interpretation of the language preferences on macOS has been fixed.
+  - The replacements for the printf()/fprintf()/... functions that are
+    provided through <libintl.h> on native Windows and NetBSD are now POSIX
+    compliant.  There is no conflict any more between these replacements
+    and other possible replacements provided by gnulib or mingw.
 
 Version 0.19.8 - June 2016
 
