Explain how to concatenate POT files.
Reported by Hadi Farah in
<https://lists.gnu.org/archive/html/bug-gettext/2018-09/msg00026.html>.

* gettext-tools/doc/msgcat.texi: Explain how to concatenate POT files.

--- a/gettext-tools/doc/msgcat.texi
+++ b/gettext-tools/doc/msgcat.texi
@@ -16,6 +16,10 @@ comments, extracted comments, and file positions will be cumulated, except that
 if @code{--use-first} is specified, they will be taken from the first PO file
 to define them.
 
+To concatenate POT files, better use @code{xgettext}, not @code{msgcat},
+because @code{msgcat} would choke on the undefined charsets in the specified
+POT files.
+
 @subsection Input file location
 
 @table @samp
